--- a/po/pa.po
+++ b/po/pa.po
@@ -1,20 +1,21 @@
+# translation of pa.po to Punjabi
 # Copyright (C) 2004 THE drwright'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the drwright package.
 # Punjab Linux Technology <punjablinux@netscape.net>, 2004.
-# , fuzzy
-# 
-# 
+# Amanpreet Singh Alam <aalam@redhat.cpm>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: drwright VERSION\n"
+"Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-07-20 03:14+0200\n"
-"PO-Revision-Date: 2004-06-19 08:00+0530\n"
-"Last-Translator: Amanpreet Singh Alam <amanlinux@netscape.net>\n"
-"Language-Team: Punjabi <indlinux-punjabi@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2004-08-22 17:38+0530\n"
+"Last-Translator: Amanpreet Singh Alam <aalam@redhat.cpm>\n"
+"Language-Team: Punjabi <fedora-pa-list@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #: data/glade/drw-preferences.glade.h:1
 msgid "    "
@@ -34,7 +35,7 @@ msgstr "<b>ਕੰਮ</b>"
 
 #: data/glade/drw-preferences.glade.h:5
 msgid "Check if breaks are allowed to be postponed"
-msgstr ""
+msgstr "ਜਾਂਚ ਕਰੋ ਕਿ ਮੁਅਤੱਵੀ ਦੌਰਾਨ ਅੰਤਰਾਲ ਸਵੀਕਾਰ ਹਨ"
 
 #: data/glade/drw-preferences.glade.h:6
 msgid "DrWright Preferences"
@@ -42,27 +43,27 @@ msgstr "ਡਾ-ਰਾਇਟ ਪਸੰਦ"
 
 #: data/glade/drw-preferences.glade.h:7
 msgid "Duration of the break when typing is disallowed"
-msgstr ""
+msgstr "ਅੰਤਰਾਲ ਦੌਰਾਨ, ਜਦੋਂ ਲਿਖਣਾ ਅਸਵੀਕਾਰ ਹੋਵੇ"
 
 #: data/glade/drw-preferences.glade.h:8
 msgid "Duration of warning before starting a break"
-msgstr ""
+msgstr "ਚੇਤਾਵਨੀ ਸਮਾੰ, ਅੰਤਰਾਲ ਸ਼ੁਰੂ ਹੋਣ ਤੋਂ ਪਹਿਲਾਂ"
 
 #: data/glade/drw-preferences.glade.h:9
 msgid "Duration of work before forcing a break"
-msgstr ""
+msgstr "ਅੰਤਰਾਲ ਲਈ ਮਜਬੂਰ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਕੰਮ ਸਮਾਂ"
 
 #: data/glade/drw-preferences.glade.h:10
 msgid "Optional phrase to use for postponing a break"
-msgstr ""
+msgstr "ਅੰਤਰਾਲ ਮੁਅਤੱਵੀ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਚੋਣਵਾਂ ਪ੍ਰਸੰਗ"
 
 #: data/glade/drw-preferences.glade.h:11
 msgid "_Allow postponing of breaks"
-msgstr ""
+msgstr "ਅੰਤਰਾਲ ਮੁਅਤੱਵੀ ਕਰਨਾ ਸਵੀਕਾਰ"
 
 #: data/glade/drw-preferences.glade.h:12
 msgid "_Break interval lasts"
-msgstr ""
+msgstr "ਆਖਰੀ ਅੰਤਰਾਲ ਸਮਾਂ"
 
 #: data/glade/drw-preferences.glade.h:13
 msgid "_Warning time is"
@@ -70,7 +71,7 @@ msgstr "ਚੇਤਾਵਨੀ ਸਮਾਂ ਹੈ"
 
 #: data/glade/drw-preferences.glade.h:14
 msgid "_Work interval lasts"
-msgstr ""
+msgstr "ਆਖਰੀ ਕੰਮ ਸਮਾਂ"
 
 #: data/glade/drw-preferences.glade.h:15
 msgid "minutes"
@@ -86,6 +87,9 @@ msgid ""
 "to have a notification area on your panel. You can add it by right-clicking "
 "on your panel and choose 'Add to panel -> Utilities -> Notification area'."
 msgstr ""
+"ਡਾ-ਰਾਇਟ ਜਾਣਕਾਰੀ ਵੇਖਾਉਣ ਲਈ ਸੂਚਨਾ ਖੇਤਰ ਵੇਖਾਉਦਾ ਹੈ| ਤੁਹਾਡੇ ਪੈਨਲ ਵਿੱਚ ਸੂਚਨਾ "
+"ਖੇਤਰ ਮੌਜੂਦ ਨਹੀਂ ਹੈ| ਤੁਸੀਂ ਆਪਣੇ ਪੈਨਲ ਤੇ ਮਾਊਸ ਦਾ ਸੱਜਾ ਬਟਨ ਦਬਾ ਕੇ ਅਤੇ "
+"'ਪੈਨਲ ਵਿੱਚ ਸ਼ਾਮਿਲ -> ਉਪਯੋਗਤਾ -> ਸੂਚਨਾ ਖੇਤਰ' ਚੁਣ ਕੇ ਸ਼ਾਮਿਲ ਕਰ ਸਕਦੇ ਹੋ"
 
 #: src/drwright.c:138
 msgid "/_Enabled"
@@ -93,11 +97,11 @@ msgstr "/ਯੋਗ"
 
 #: src/drwright.c:139
 msgid "/_Take a Break"
-msgstr "/ਇੱਕ ਅੰਤਰਾਲ"
+msgstr "/ਇੱਕ ਅੰਤਰਾਲ ਲਵੋਂ"
 
 #: src/drwright.c:141
 msgid "/_Preferences"
-msgstr "/ਪਸੰਦ"
+msgstr "/ਮੇਰੀ ਪਸੰਦ"
 
 #: src/drwright.c:142
 msgid "/_About"
@@ -114,15 +118,15 @@ msgstr "ਅਯੋਗ"
 #: src/drwright.c:493
 #, c-format
 msgid "%d minutes until the next break"
-msgstr ""
+msgstr "ਅਗਲੇ ਅੰਤਰਾਲ ਲਈ %d ਮਿੰਟ ਬਾਕੀ"
 
 #: src/drwright.c:496
 msgid "One minute until the next break"
-msgstr ""
+msgstr "ਅਗਲੇ ਅੰਤਰਾਲ ਲਈ ਇੱਕ ਮਿੰਟ ਬਾਕੀ"
 
 #: src/drwright.c:498
 msgid "Less than one minute until the next break"
-msgstr ""
+msgstr "ਅਗਲੇ ਅੰਤਰਾਲ ਲਈ ਇੱਕ ਮਿੰਟ ਤੋਂ ਘੱਟ ਬਾਕੀ"
 
 #: src/drwright.c:609
 msgid "Quit DrWright?"
@@ -130,7 +134,7 @@ msgstr "ਡਾ-ਰਾਇਟ ਬੰਦ?"
 
 #: src/drwright.c:610
 msgid "Don't forget to take regular breaks."
-msgstr ""
+msgstr "ਨਿਯਮਿਤ ਅੰਤਰਾਲ ਲੈਣੇ ਨਾ ਭੁੱਲੋਂ"
 
 #: src/drwright.c:621
 msgid "Don't Quit"
@@ -162,8 +166,9 @@ msgstr "ਅੰਤਰਾਲ ਯਾਦ"
 
 #: src/drw-break-window.c:208
 msgid "_Postpone break"
-msgstr "ਬਰੇਕ ਨੂੰ ਮੁਅੱਤਲ ਕਰੋ"
+msgstr "ਅੰਤਰਾਲ ਨੂੰ ਮੁਅੱਤਲ ਕਰੋ"
 
 #: src/drw-break-window.c:251
 msgid "Take a break!"
 msgstr "ਇੱਕ ਅੰਤਰਾਲ !"
+
