--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-17  Pawan Chitrakar  <pawan@nplinux.org>
+
+	* ne.po: Added Nepali Translation
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * rw.po: Added Kinyarwanda translation.
