--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-07  Ilkka Tuohela  <hile@iki.fi>
+	
+	* configure.in: Added fi to ALL_LINGUAS.
+
 2005-11-03  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* configure.in:
