--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-07  Ilkka Tuohela  <hile@iki.fi>
+	
+	* fi.po: Added Finnish translation.
+
 2005-08-27  Josep Puigdemont  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
