--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-28  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Emmanuel Andry <eandry@free.fr>.
+
 2006-01-07  Ilkka Tuohela  <hile@iki.fi>
 	
 	* fi.po: Added Finnish translation.
