--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-24  Matic Zgur  <mr.zgur@gmail.com>
+
+	* configure.in: Added 'sl' to ALL_LINGUAS.
+
 2007-01-24  Pema Geyleg  <pema.geyleg@gmail.com>
 
 	* configure.in: Added 'dz' to ALL_LINGUAS.
