--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-24  Matic Zgur  <mr.zgur@gmail.com>
+
+	* sl.po: Added Slovenian translation.
+
 2007-01-24  Pema Geyleg  <pema.geyleg@gmail.com>
 
 	* dz.po: Added Dzongkha Translation.
